codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_pilot_ace_failure_restores_original_composer.snap
---
source: tui/src/chatwidget/tests/prompt_pilot.rs
expression: "lines_to_single_string(&cells[0])"
---
■ PromptPilot ACE skipped enhancement because guardrails failed.
